objects/Outcome_WarmLead__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>The Outcome_WarmLead custom setting will be used to define the values used when a Warm Lead is created as an Outcome.  These fields are used by a workflow rule, based on two prerequisites – the Source Interaction field is populated with a value, and the Outcome Type field is set to ‘Product Lead (OAB).</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Event__c</fullName>
        <label>Lead Event</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Origin__c</fullName>
        <label>Lead Origin</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketer_Assignment__c</fullName>
        <label>Marketer Assignment</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Associate_Assignment__c</fullName>
        <label>Marketing Associate Assignment</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Status__c</fullName>
        <label>Qualification Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>RecordType</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Outcome WarmLead</label>
</CustomObject>